// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChipButton renders correctly 1`] = `
<button
  className="sc-iELTvK bcMrYS"
>
  Chip Button
</button>
`;

exports[`ChipButton renders correctly with an active prop 1`] = `
<button
  className="sc-iELTvK fsXoVL"
>
  Chip Button
</button>
`;

exports[`ChipButtonGroup renders correctly 1`] = `
<div
  className="sc-cmTdod faHWIS"
>
  <button
    className="sc-iELTvK fsXoVL"
    onClick={[Function]}
  >
    ChipButton 1
  </button>
  <button
    className="sc-iELTvK fsXoVL"
    onClick={[Function]}
  >
    ChipButton 2
  </button>
</div>
`;

exports[`ChipButtonGroup renders correctly with a value set 1`] = `
<div
  className="sc-cmTdod faHWIS"
>
  <button
    className="sc-iELTvK fsXoVL"
    onClick={[Function]}
    value="Active"
  >
    ChipButton 1
  </button>
  <button
    className="sc-iELTvK bcMrYS"
    onClick={[Function]}
  >
    ChipButton 2
  </button>
</div>
`;
